--- a/.github/workflows/first-interaction.yml
+++ b/.github/workflows/first-interaction.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/first-interaction@main
+        id: first-interaction
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           issue-message: |
@@ -25,6 +26,8 @@ jobs:
             If you are fixing a bug, please reference the issue number in the description.
 
             If you are implementing a feature request, please check with the maintainers that the feature will be accepted first.
-      - name: aah
-        run: echo "Is this code reached"
-            
+        continue-on-error: true
+      - if: steps.first-interaction.outcome == 'success'
+        run: echo "first-interaction success"
+      - if: steps.first-interaction.outcome == 'failure' 
+        run: echo "first-interaction failed"
