--- a/.github/workflows/is-first-interaction.yml
+++ b/.github/workflows/is-first-interaction.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/first-interaction@main
+      - uses: fishstiz/is-first-interaction@main
         id: first-interaction
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
@@ -26,8 +26,4 @@ jobs:
             If you are fixing a bug, please reference the issue number in the description.
 
             If you are implementing a feature request, please check with the maintainers that the feature will be accepted first.
-        continue-on-error: true
-      - if: steps.first-interaction.outcome == 'success'
-        run: echo "first-interaction success"
-      - if: steps.first-interaction.outcome == 'failure' 
-        run: echo "first-interaction failed"
+      - run: 'echo Code Reached'
