--- a/.github/workflows/is-first-interaction.yml
+++ b/.github/workflows/is-first-interaction.yml
@@ -16,14 +16,14 @@ jobs:
         id: first-interaction
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          # issue-message: |
-          #   Hello! Thank you for filing an issue.
+          issue-message: |
+            Hello! Thank you for filing an issue.
 
-          #   If this is a bug report, please include relevant logs to help us debug the problem.
-          # pr-message: |
-          #   Hello! Thank you for your contribution.
+            If this is a bug report, please include relevant logs to help us debug the problem.
+          pr-message: |
+            Hello! Thank you for your contribution.
             
-          #   If you are fixing a bug, please reference the issue number in the description.
+            If you are fixing a bug, please reference the issue number in the description.
 
-          #   If you are implementing a feature request, please check with the maintainers that the feature will be accepted first.
-      - run: 'echo Code Reached'
+            If you are implementing a feature request, please check with the maintainers that the feature will be accepted first.
+      - run: 'echo Code reached if first time contributor'
